Support for Babelfish v.4.4.0 (#135)
* Support for Babelfish v.4.4.0

* Support for Babelfish v.4.4.0

* update .cfg checksum

* Support for Babelfish v.4.4.0

* Support for Babelfish v.4.4.0

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Nov-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Dec-2024                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle:
@@ -198,6 +198,7 @@ rule=xml_value_call,xml_query_call,xml_exist_call,xml_modify_call,xml_nodes_meth
 list=EXIST,MODIFY,VALUE,QUERY,NODES,SELECT FOR XML AUTO,SELECT FOR XML AUTO ELEMENTS,SELECT FOR XML EXPLICIT,SELECT FOR XML PATH,SELECT FOR XML PATH ELEMENTS,SELECT FOR XML RAW,SELECT FOR XML RAW ELEMENTS,XML SCHEMA COLLECTION,XML TYPE DEFINITION,XML INDEX,SELECTIVE XML INDEX,WITH XMLNAMESPACES,XML COLUMN_SET FOR ALL_SPARSE_COLUMNS
 report_group=XML
 supported-1.0.0=SELECT FOR XML PATH,SELECT FOR XML RAW
+supported-4.4.0=EXIST
 complexity_score=HIGH
 complexity_score-MEDIUM=EXIST,VALUE,QUERY,NODES
 
@@ -616,6 +617,7 @@ complexity_score=HIGH
 
 [ALTER FUNCTION]
 rule=create_or_alter_function
+supported-4.4.0=*
 report_group=Functions
 complexity_score=HIGH
 
@@ -775,11 +777,12 @@ report_group=Procedures
 
 [CREATE DATABASE options]
 rule=create_database
-list=COLLATE,COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS,COLLATE ANY,CATALOG_COLLATION,CATALOG_COLLATION DATABASE_DEFAULT,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CONTAINMENT=PARTIAL,CONTAINMENT=NONE,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY
+list=COLLATE,COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS,COLLATE BBF_UNICODE_CP1250_CI_AI,COLLATE BBF_UNICODE_CP1250_CI_AS,COLLATE POLISH_CI_AI,COLLATE POLISH_CI_AS,COLLATE BBF_UNICODE_BIN2,COLLATE BBF_UNICODE_CP1_CI_AI,COLLATE BBF_UNICODE_CP1_CI_AS,COLLATE FINNISH_SWEDISH_CI_AI,COLLATE FINNISH_SWEDISH_CI_AS,COLLATE FRENCH_CI_AI,COLLATE FRENCH_CI_AS,COLLATE MODERN_SPANISH_CI_AI,COLLATE MODERN_SPANISH_CI_AS,COLLATE TRADITIONAL_SPANISH_CI_AI,COLLATE TRADITIONAL_SPANISH_CI_AS,COLLATE BBF_UNICODE_CP1257_CI_AI,COLLATE BBF_UNICODE_CP1257_CI_AS,COLLATE ESTONIAN_CI_AI,COLLATE ESTONIAN_CI_AS,COLLATE LATIN1_GENERAL_100_BIN2,COLLATE LATIN1_GENERAL_140_BIN2,COLLATE LATIN1_GENERAL_90_BIN2,COLLATE LATIN1_GENERAL_BIN2,COLLATE SQL_LATIN1_GENERAL_CP1250_CI_AS,COLLATE LATIN1_GENERAL_CI_AI,COLLATE SQL_LATIN1_GENERAL_CP1_CI_AI,COLLATE LATIN1_GENERAL_CI_AS,COLLATE SQL_LATIN1_GENERAL_CP1251_CI_AS,COLLATE SQL_LATIN1_GENERAL_CP1257_CI_AS,CATALOG_COLLATION,CATALOG_COLLATION DATABASE_DEFAULT,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CONTAINMENT=PARTIAL,CONTAINMENT=NONE,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY
 supported-1.0.0=CONTAINMENT=NONE
 ignored-2.4.0=CATALOG_COLLATION DATABASE_DEFAULT
 ignored-2.4.0=COLLATE
 supported-3.1.0=COLLATE SQL_LATIN1_GENERAL_CP1_CI_AS
+supported-4.4.0=COLLATE BBF_UNICODE_CP1250_CI_AI,COLLATE BBF_UNICODE_CP1250_CI_AS,COLLATE POLISH_CI_AI,COLLATE POLISH_CI_AS,COLLATE BBF_UNICODE_BIN2,COLLATE BBF_UNICODE_CP1_CI_AI,COLLATE BBF_UNICODE_CP1_CI_AS,COLLATE FINNISH_SWEDISH_CI_AI,COLLATE FINNISH_SWEDISH_CI_AS,COLLATE FRENCH_CI_AI,COLLATE FRENCH_CI_AS,COLLATE MODERN_SPANISH_CI_AI,COLLATE MODERN_SPANISH_CI_AS,COLLATE TRADITIONAL_SPANISH_CI_AI,COLLATE TRADITIONAL_SPANISH_CI_AS,COLLATE BBF_UNICODE_CP1257_CI_AI,COLLATE BBF_UNICODE_CP1257_CI_AS,COLLATE ESTONIAN_CI_AI,COLLATE ESTONIAN_CI_AS,COLLATE LATIN1_GENERAL_100_BIN2,COLLATE LATIN1_GENERAL_140_BIN2,COLLATE LATIN1_GENERAL_90_BIN2,COLLATE LATIN1_GENERAL_BIN2,COLLATE SQL_LATIN1_GENERAL_CP1250_CI_AS,COLLATE LATIN1_GENERAL_CI_AI,COLLATE SQL_LATIN1_GENERAL_CP1_CI_AI,COLLATE LATIN1_GENERAL_CI_AS,COLLATE SQL_LATIN1_GENERAL_CP1251_CI_AS,COLLATE SQL_LATIN1_GENERAL_CP1257_CI_AS
 report_group=Databases
 
 [ALTER DATABASE]
@@ -884,7 +887,7 @@ report_group=DML
 
 [Cross-database reference]
 rule=full_object_name
-list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE,SET IDENTITY_INSERT
+list=SELECT,INSERT,UPDATE,DELETE,MERGE,SELECT..INTO,EXECUTE,TRUNCATE TABLE,CREATE INDEX,DROP INDEX,UPDATE STATISTICS,CREATE TABLE,ALTER TABLE,SET IDENTITY_INSERT,CREATE SYNONYM
 supported-2.1.0=SELECT,INSERT,UPDATE,DELETE,SELECT..INTO
 supported-2.2.0=EXECUTE
 report_group=Identifiers
@@ -1052,6 +1055,7 @@ supported-3.5.0-3.*=availability_groups,availability_replicas
 supported-4.1.0=availability_groups,availability_replicas
 supported-4.2.0=login_token,user_token
 supported-4.3.0=sequences,partition_functions,partition_schemes,partition_parameters,partition_range_values,destination_data_spaces
+supported-4.4.0=dm_os_sys_info
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -1081,6 +1085,7 @@ supported-3.4.0=sp_who,sp_changedbowner
 supported-3.5.0-3.*=sp_procedure_params_100_managed
 supported-4.1.0=sp_procedure_params_100_managed
 supported-4.2.0=sp_renamedb
+supported-4.4.0=sp_reset_connection
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
@@ -1166,6 +1171,7 @@ rule=pivot_clause
 list=PIVOT,VIEW,CTE,JOIN
 supported-3.4.0=PIVOT
 supported-4.2.0=CTE,JOIN
+supported-4.4.0=VIEW
 report_group=DML
 
 [SELECT..UNPIVOT]
@@ -1661,5 +1667,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=17a3941b
+#file checksum=72d4288c
 #--- end ---------------------------------------------------------------------------
