Adding Support for v.5.0.0
Signed-off-by: Tanya Gupta <tanyagp@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0, 5.0.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Dec-2024                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jan-2025                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle:
@@ -1545,6 +1545,7 @@ report_group=Users
 [DB roles]
 rule=alter_db_role
 list=DB_OWNER,DB_SECURITYADMIN,DB_ACCESSADMIN,DB_BACKUPOPERATOR,DB_DDLADMIN,DB_DATAWRITER,DB_DATAREADER,DB_DENYDATAWRITER,DB_DENYDATAREADER
+supported-5.0.0=DB_DATAREADER,DB_DATAWRITER,DB_DDLADMIN,DB_ACCESSADMIN,DB_SECURITYADMIN,DB_OWNER
 report_group=Users
 complexity_score=HIGH
 
@@ -1556,6 +1557,7 @@ report_group=Users
 rule=alter_server_role
 list=SYSADMIN,SERVERADMIN,SECURITYADMIN,PROCESSADMIN,SETUPADMIN,BULKADMIN,DISKADMIN,DBCREATOR
 supported-1.0.0=SYSADMIN
+supported-5.0.0=SECURITYADMIN,DBCREATOR
 report_group=Users
 
 [Server role options]
@@ -1667,5 +1669,5 @@ list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
 #-----------------------------------------------------------------------------------
-#file checksum=72d4288c
+#file checksum=ab6afbca
 #--- end ---------------------------------------------------------------------------
