Report legacy schema names

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -561,6 +561,7 @@ supported-1.2.0=arg1=physical_net_transport,client_net_address
 [DATABASEPROPERTYEX]
 rule=function_call
 supported-1.0.0=arg2=Collation,Edition,IsAutoClose,IsAutoCreateStatistics,IsInStandBy,IsTornPageDetectionEnabled,Status,Updateability,Version
+report_group-Fulltext Search=isfulltextindexed
 
 [SQL_VARIANT_PROPERTY]
 rule=function_call
@@ -581,14 +582,17 @@ supported-1.0.0=arg2=NO_SUPPORTED_ARGUMENTS_RIGHT_NOW
 [COLUMNPROPERTY] 
 rule=function_call
 supported-1.1.0=arg3=CharMaxLen,AllowsNull
+report_group-Fulltext Search=isfulltextindexed
 
 [OBJECTPROPERTY] 
 rule=function_call
 supported-2.2.0=arg2=ExecIsAnsiNullsOn,ExecIsQuotedIdentOn,IsDefault,IsDefaultCnst,IsDeterministic,IsIndexed,IsInlineFunction,IsMSShipped,IsPrimaryKey,IsProcedure,IsRule,IsScalarFunction,IsSchemaBound,IsTable,IsTableFunction,IsTrigger,IsUserTable,IsView,OwnerId,TableFulltextPopulateStatus,TableHasVarDecimalStorageFormat
+report_group-Fulltext Search=tablefulltextcatalogid
 
 [OBJECTPROPERTYEX]
 rule=function_call 
 supported-2.2.0=arg2=ExecIsAnsiNullsOn,ExecIsQuotedIdentOn,IsDefault,IsDefaultCnst,IsDeterministic,IsIndexed,IsInlineFunction,IsMSShipped,IsPrimaryKey,IsProcedure,IsRule,IsScalarFunction,IsSchemaBound,IsTable,IsTableFunction,IsTrigger,IsUserTable,IsView,OwnerId,TableFulltextPopulateStatus,TableHasVarDecimalStorageFormat,BaseType
+report_group-Fulltext Search=tablefulltextcatalogid
 
 [TYPEPROPERTY]
 rule=function_call
@@ -597,6 +601,7 @@ supported-1.0.0=arg2=NO_SUPPORTED_ARGUMENTS_RIGHT_NOW
 [INDEXPROPERTY]
 rule=function_call
 supported-2.2.0=arg3=IndexFillFactor,IndexID,IsClustered,IsDisabled,IsHypothetical,IsPadIndex,IsPageLockDisallowed,IsRowLockDisallowed,IsUnique
+report_group-Fulltext Search=isfulltextkey
 
 [INDEXKEY_PROPERTY]
 rule=function_call
@@ -1089,6 +1094,7 @@ supported-4.4.0=sp_reset_connection
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
+report_group-Fulltext Search=sp_fulltext_database
 complexity_score=HIGH
 complexity_score-LOW=sp_addextendedproperty,sp_addtype,sp_addlogin,sp_droplogin,sp_adduser,sp_dropuser,sp_password,sp_addrolemember,sp_droprolemember,sp_addsrvrolemember,sp_dropsrvrolemember,sp_xml_preparedocument,sp_xml_removedocument
 
@@ -1668,6 +1674,12 @@ rule=function_call
 list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
 complexity_score=HIGH
 
+[Legacy Schema Names]
+rule=id
+list=DB_OWNER,DB_ACCESSADMIN,DB_SECURITYADMIN,DB_DDLADMIN,DB_BACKUPOPERATOR,DB_DATAREADER,DB_DATAWRITER,DB_DENYDATAREADER,DB_DENYDATAWRITER
+report_group=Identifiers
+complexity_score=LOW
+
 #-----------------------------------------------------------------------------------
-#file checksum=ab6afbca
+#file checksum=b4ac16b3
 #--- end ---------------------------------------------------------------------------
