Removed single quotes in collation values in cfg
Signed-off-by: Manisha Deshpande <mmdeshp@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -1034,7 +1034,7 @@ rule=collation
 # generally, not supported are %_ws,%_ks,%_vs,%_sc
 supported-1.0.0=ARABIC_CS_AS,ARABIC_CI_AI,ARABIC_CI_AS,CHINESE_PRC_CS_AS,CHINESE_PRC_CI_AI,CHINESE_PRC_CI_AS,CYRILLIC_GENERAL_CS_AS,CYRILLIC_GENERAL_CI_AI,CYRILLIC_GENERAL_CI_AS,FINNISH_SWEDISH_CS_AS,FINNISH_SWEDISH_CI_AS,FINNISH_SWEDISH_CI_AI,FRENCH_CS_AS,FRENCH_CI_AS,FRENCH_CI_AI,KOREAN_WANSUNG_CS_AS,KOREAN_WANSUNG_CI_AS,KOREAN_WANSUNG_CI_AI,LATIN1_GENERAL_BIN2,LATIN1_GENERAL_90_BIN2,LATIN1_GENERAL_100_BIN2,LATIN1_GENERAL_140_BIN2,LATIN1_GENERAL_CI_AI,LATIN1_GENERAL_CI_AS,LATIN1_GENERAL_CS_AI,LATIN1_GENERAL_CS_AS,MODERN_SPANISH_CS_AS,MODERN_SPANISH_CI_AS,MODERN_SPANISH_CI_AI,POLISH_CS_AS,POLISH_CI_AS,POLISH_CI_AI,SQL_LATIN1_GENERAL_CP1250_CI_AS,SQL_LATIN1_GENERAL_CP1250_CS_AS,SQL_LATIN1_GENERAL_CP1251_CI_AS,SQL_LATIN1_GENERAL_CP1251_CS_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CI_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CS_AS,SQL_LATIN1_GENERAL_PREF_CP1_CS_AS,SQL_LATIN1_GENERAL_CP1253_CI_AS,SQL_LATIN1_GENERAL_CP1253_CS_AS,SQL_LATIN1_GENERAL_CP1254_CI_AS,SQL_LATIN1_GENERAL_CP1254_CS_AS,SQL_LATIN1_GENERAL_CP1255_CI_AS,SQL_LATIN1_GENERAL_CP1255_CS_AS,SQL_LATIN1_GENERAL_CP1256_CI_AS,SQL_LATIN1_GENERAL_CP1256_CS_AS,SQL_LATIN1_GENERAL_CP1257_CI_AS,SQL_LATIN1_GENERAL_CP1257_CS_AS,SQL_LATIN1_GENERAL_CP1258_CI_AS,SQL_LATIN1_GENERAL_CP1258_CS_AS,THAI_CS_AS,THAI_CI_AS,THAI_CI_AI,TRADITIONAL_SPANISH_CS_AS,TRADITIONAL_SPANISH_CI_AS,TRADITIONAL_SPANISH_CI_AI,TURKISH_CS_AS,TURKISH_CI_AS,TURKISH_CI_AI,UKRAINIAN_CS_AS,UKRAINIAN_CI_AS,UKRAINIAN_CI_AI,VIETNAMESE_CS_AS,VIETNAMESE_CI_AS,VIETNAMESE_CI_AI
 supported-2.1.0=JAPANESE_CS_AS,JAPANESE_CI_AI,JAPANESE_CI_AS
-supported-2.2.0=DATABASE_DEFAULT,'ESTONIAN_CI_AI','ESTONIAN_CI_AS','ESTONIAN_CS_AS','GREEK_CI_AI','GREEK_CI_AS','GREEK_CS_AS','HEBREW_CI_AI','HEBREW_CI_AS','HEBREW_CS_AS','MONGOLIAN_CI_AI','MONGOLIAN_CI_AS','MONGOLIAN_CS_AS','SQL_LATIN1_GENERAL_CP874_CI_AS','SQL_LATIN1_GENERAL_CP874_CS_AS'
+supported-2.2.0=DATABASE_DEFAULT,ESTONIAN_CI_AI,ESTONIAN_CI_AS,ESTONIAN_CS_AS,GREEK_CI_AI,GREEK_CI_AS,GREEK_CS_AS,HEBREW_CI_AI,HEBREW_CI_AS,HEBREW_CS_AS,MONGOLIAN_CI_AI,MONGOLIAN_CI_AS,MONGOLIAN_CS_AS,SQL_LATIN1_GENERAL_CP874_CI_AS,SQL_LATIN1_GENERAL_CP874_CS_AS
 complexity_score=LOW
 
 [Case-sensitive collation]
@@ -1681,5 +1681,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=7a16cdec
+#file checksum=07cb0775
 #--- end ---------------------------------------------------------------------------
