--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0, 5.0.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0, 4.5.0, 5.1.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Jan-2025                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Apr-2025                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle:
@@ -1034,7 +1034,7 @@ rule=collation
 # generally, not supported are %_ws,%_ks,%_vs,%_sc
 supported-1.0.0=ARABIC_CS_AS,ARABIC_CI_AI,ARABIC_CI_AS,CHINESE_PRC_CS_AS,CHINESE_PRC_CI_AI,CHINESE_PRC_CI_AS,CYRILLIC_GENERAL_CS_AS,CYRILLIC_GENERAL_CI_AI,CYRILLIC_GENERAL_CI_AS,FINNISH_SWEDISH_CS_AS,FINNISH_SWEDISH_CI_AS,FINNISH_SWEDISH_CI_AI,FRENCH_CS_AS,FRENCH_CI_AS,FRENCH_CI_AI,KOREAN_WANSUNG_CS_AS,KOREAN_WANSUNG_CI_AS,KOREAN_WANSUNG_CI_AI,LATIN1_GENERAL_BIN2,LATIN1_GENERAL_90_BIN2,LATIN1_GENERAL_100_BIN2,LATIN1_GENERAL_140_BIN2,LATIN1_GENERAL_CI_AI,LATIN1_GENERAL_CI_AS,LATIN1_GENERAL_CS_AI,LATIN1_GENERAL_CS_AS,MODERN_SPANISH_CS_AS,MODERN_SPANISH_CI_AS,MODERN_SPANISH_CI_AI,POLISH_CS_AS,POLISH_CI_AS,POLISH_CI_AI,SQL_LATIN1_GENERAL_CP1250_CI_AS,SQL_LATIN1_GENERAL_CP1250_CS_AS,SQL_LATIN1_GENERAL_CP1251_CI_AS,SQL_LATIN1_GENERAL_CP1251_CS_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CI_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CS_AS,SQL_LATIN1_GENERAL_PREF_CP1_CS_AS,SQL_LATIN1_GENERAL_CP1253_CI_AS,SQL_LATIN1_GENERAL_CP1253_CS_AS,SQL_LATIN1_GENERAL_CP1254_CI_AS,SQL_LATIN1_GENERAL_CP1254_CS_AS,SQL_LATIN1_GENERAL_CP1255_CI_AS,SQL_LATIN1_GENERAL_CP1255_CS_AS,SQL_LATIN1_GENERAL_CP1256_CI_AS,SQL_LATIN1_GENERAL_CP1256_CS_AS,SQL_LATIN1_GENERAL_CP1257_CI_AS,SQL_LATIN1_GENERAL_CP1257_CS_AS,SQL_LATIN1_GENERAL_CP1258_CI_AS,SQL_LATIN1_GENERAL_CP1258_CS_AS,THAI_CS_AS,THAI_CI_AS,THAI_CI_AI,TRADITIONAL_SPANISH_CS_AS,TRADITIONAL_SPANISH_CI_AS,TRADITIONAL_SPANISH_CI_AI,TURKISH_CS_AS,TURKISH_CI_AS,TURKISH_CI_AI,UKRAINIAN_CS_AS,UKRAINIAN_CI_AS,UKRAINIAN_CI_AI,VIETNAMESE_CS_AS,VIETNAMESE_CI_AS,VIETNAMESE_CI_AI
 supported-2.1.0=JAPANESE_CS_AS,JAPANESE_CI_AI,JAPANESE_CI_AS
-supported-2.2.0=DATABASE_DEFAULT,'ESTONIAN_CI_AI','ESTONIAN_CI_AS','ESTONIAN_CS_AS','GREEK_CI_AI','GREEK_CI_AS','GREEK_CS_AS','HEBREW_CI_AI','HEBREW_CI_AS','HEBREW_CS_AS','MONGOLIAN_CI_AI','MONGOLIAN_CI_AS','MONGOLIAN_CS_AS','SQL_LATIN1_GENERAL_CP874_CI_AS','SQL_LATIN1_GENERAL_CP874_CS_AS'
+supported-2.2.0=DATABASE_DEFAULT,ESTONIAN_CI_AI,ESTONIAN_CI_AS,ESTONIAN_CS_AS,GREEK_CI_AI,GREEK_CI_AS,GREEK_CS_AS,HEBREW_CI_AI,HEBREW_CI_AS,HEBREW_CS_AS,MONGOLIAN_CI_AI,MONGOLIAN_CI_AS,MONGOLIAN_CS_AS,SQL_LATIN1_GENERAL_CP874_CI_AS,SQL_LATIN1_GENERAL_CP874_CS_AS
 complexity_score=LOW
 
 [Case-sensitive collation]
@@ -1551,7 +1551,7 @@ report_group=Users
 [DB roles]
 rule=alter_db_role
 list=DB_OWNER,DB_SECURITYADMIN,DB_ACCESSADMIN,DB_BACKUPOPERATOR,DB_DDLADMIN,DB_DATAWRITER,DB_DATAREADER,DB_DENYDATAWRITER,DB_DENYDATAREADER
-supported-5.0.0=DB_DATAREADER,DB_DATAWRITER,DB_DDLADMIN,DB_ACCESSADMIN,DB_SECURITYADMIN,DB_OWNER
+supported-4.5.0=DB_DATAREADER,DB_DATAWRITER,DB_DDLADMIN,DB_ACCESSADMIN,DB_SECURITYADMIN,DB_OWNER
 report_group=Users
 complexity_score=HIGH
 
@@ -1563,7 +1563,7 @@ report_group=Users
 rule=alter_server_role
 list=SYSADMIN,SERVERADMIN,SECURITYADMIN,PROCESSADMIN,SETUPADMIN,BULKADMIN,DISKADMIN,DBCREATOR
 supported-1.0.0=SYSADMIN
-supported-5.0.0=SECURITYADMIN,DBCREATOR
+supported-4.5.0=SECURITYADMIN,DBCREATOR
 report_group=Users
 
 [Server role options]
@@ -1681,5 +1681,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=b429f2f8
+#file checksum=07cb0775
 #--- end ---------------------------------------------------------------------------
