Support for Babelfish v.5.2.0 (17.5) and v.4.6.0 (16.9)
Updated time and metadata config for new minor version releases of
babelfish v5.2.0 (PG 17.5) and v4.6.0 (PG 16.9). Added support for newly
supported features ALTER VIEW and UNPIVOT.

Task: BABEL-5786
Signed-off-by: Manisha Deshpande <mmdeshp@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0, 4.5.0, 5.1.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0, 3.5.0, 4.0.0, 4.1.0, 4.2.0, 4.3.0, 4.4.0, 4.5.0, 4.6.0, 5.1.0, 5.2.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Apr-2025                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jun-2025                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle:
@@ -611,6 +611,8 @@ supported-1.0.0=arg4=NO_SUPPORTED_ARGUMENTS_RIGHT_NOW
 
 [ALTER VIEW]
 rule=create_or_alter_view
+supported-4.6.0-4.*=*
+supported-5.2.0-5.*=*
 report_group=Views
 complexity_score=HIGH
 
@@ -1182,6 +1184,8 @@ report_group=DML
 
 [SELECT..UNPIVOT]
 rule=unpivot_clause
+supported-4.6.0-4.*=*
+supported-5.2.0-5.*=*
 report_group=DML
 
 [SELECT TOP WITH TIES]
@@ -1681,5 +1685,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=07cb0775
+#file checksum=1f187f61
 #--- end ---------------------------------------------------------------------------
