Fixed pr comment
Signed-off-by: Manisha Deshpande <mmdeshp@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -612,7 +612,7 @@ supported-1.0.0=arg4=NO_SUPPORTED_ARGUMENTS_RIGHT_NOW
 [ALTER VIEW]
 rule=create_or_alter_view
 supported-4.6.0-4.*=*
-supported-5.2.0-5.*=*
+supported-5.2.0=*
 report_group=Views
 complexity_score=HIGH
 
@@ -1185,7 +1185,7 @@ report_group=DML
 [SELECT..UNPIVOT]
 rule=unpivot_clause
 supported-4.6.0-4.*=*
-supported-5.2.0-5.*=*
+supported-5.2.0=*
 report_group=DML
 
 [SELECT TOP WITH TIES]
@@ -1685,5 +1685,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=1f187f61
+#file checksum=be181bae
 #--- end ---------------------------------------------------------------------------
