Added support for Geospatial functions
Added support for geospatial function calls: STDimension, STDisjoint,
STIntersects, STIsClosed, STIsEmpty, STIsValid

Task: BABEL-5786
Signed-off-by: Manisha Deshpande <mmdeshp@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -222,6 +222,8 @@ rule=function_call
 supported-3.5.0-3.*=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,STGEOMFROMTEXT,POINT
 supported-4.1.0=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,STGEOMFROMTEXT,POINT
 supported-4.3.0=STCONTAINS,STEQUALS,STAREA
+supported-4.6.0-4.*=STDIMENSION,STDISJOINT,STINTERSECTS,STISCLOSED,STISEMPTY,STISVALID
+supported-5.2.0=STDIMENSION,STDISJOINT,STINTERSECTS,STISCLOSED,STISEMPTY,STISVALID
 report_group=Geospatial
 complexity_score=HIGH
 
@@ -1685,5 +1687,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=be181bae
+#file checksum=660d1fd5
 #--- end ---------------------------------------------------------------------------
