Added list item for Alter View in .cfg file to handle unsupported case
Signed-off-by: Rahul Parande <rparande@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -613,8 +613,9 @@ supported-1.0.0=arg4=NO_SUPPORTED_ARGUMENTS_RIGHT_NOW
 
 [ALTER VIEW]
 rule=create_or_alter_view
-supported-4.6.0-4.*=*
-supported-5.2.0=*
+list=VIEW,TRIGGER
+supported-4.6.0-4.*=VIEW
+supported-5.2.0=VIEW
 report_group=Views
 complexity_score=HIGH
 
@@ -1687,5 +1688,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=660d1fd5
+#file checksum=6491aedf
 #--- end ---------------------------------------------------------------------------
