Add compass support for geospatial changes
Signed-off-by: Anikait Agrawal <agraani@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -224,6 +224,8 @@ supported-4.1.0=STX,STY,LAT,LONG,STASTEXT,STASBINARY,STDISTANCE,STPOINTFROMTEXT,
 supported-4.3.0=STCONTAINS,STEQUALS,STAREA
 supported-4.6.0-4.*=STDIMENSION,STDISJOINT,STINTERSECTS,STISCLOSED,STISEMPTY,STISVALID
 supported-5.2.0=STDIMENSION,STDISJOINT,STINTERSECTS,STISCLOSED,STISEMPTY,STISVALID
+supported-4.7.0-4.*=HASZ,HASM,Z,M
+supported-5.3.0=HASZ,HASM,Z,M
 report_group=Geospatial
 complexity_score=HIGH
 
@@ -1688,5 +1690,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=6f88388b
+#file checksum=76e03d7c
 #--- end ---------------------------------------------------------------------------
