Add support for System views and function

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -1068,6 +1068,8 @@ supported-4.1.0=availability_groups,availability_replicas
 supported-4.2.0=login_token,user_token
 supported-4.3.0=sequences,partition_functions,partition_schemes,partition_parameters,partition_range_values,destination_data_spaces
 supported-4.4.0=dm_os_sys_info
+supported-4.6.0-4.*=sql_logins,server_permissions
+supported-5.2.0=sql_logins,server_permissions
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -1129,6 +1131,8 @@ rule=function_call
 list=fn_enumcurrentprincipals,fn_getcurrentprincipal,fn_getrowsetidfromrowdump,fn_isbitsetinbitmask,fn_msdayasnumber,fn_msgeneration_downloadonly,fn_msget_dynamic_filter_login,fn_msorbitmaps,fn_msrepl_getsrvidfromdistdb,fn_msrepl_map_resolver_clsid,fn_mstestbit,fn_msvector_downloadonly,fn_msxe_read_event_stream,fn_mapschematype,fn_pagerescracker,fn_physloccracker,fn_physlocformatter,fn_rowdumpcracker,fn_builtin_permissions,fn_ccolventries_80,fn_cdc_check_parameters,fn_cdc_decrement_lsn,fn_cdc_get_column_ordinal,fn_cdc_get_max_lsn,fn_cdc_get_min_lsn,fn_cdc_has_column_changed,fn_cdc_hexstrtobin,fn_cdc_increment_lsn,fn_cdc_is_bit_set,fn_cdc_map_lsn_to_time,fn_cdc_map_time_to_lsn,fn_check_object_signatures,fn_column_store_row_groups,fn_db_backup_file_snapshots,fn_dblog,fn_dblog_xtp,fn_dbslog,fn_dump_dblog,fn_dump_dblog_xtp,fn_fiscoltracked,fn_full_dblog,fn_get_audit_file,fn_get_sql,fn_getproviderstring,fn_hadr_backup_is_preferred_replica,fn_hadr_distributed_ag_database_replica,fn_hadr_distributed_ag_replica,fn_hadr_is_primary_replica,fn_hadr_is_same_replica,fn_helpcollations,fn_helpdatatypemap,fn_isrolemember,fn_listextendedproperty,fn_my_permissions,fn_numberof1inbinaryafterloc,fn_numberof1invarbinary,fn_repl_hash_binary,fn_repladjustcolumnmap,fn_repldecryptver4,fn_replformatdatetime,fn_replgetcolidfrombitmap,fn_replgetparsedddlcmd,fn_replp2pversiontotranid,fn_replreplacesinglequote,fn_replreplacesinglequoteplusprotectstring,fn_repluniquename,fn_replvarbintoint,fn_servershareddrives,fn_sqlagent_job_history,fn_sqlagent_jobs,fn_sqlagent_jobsteps,fn_sqlagent_jobsteps_logs,fn_sqlagent_subsystems,fn_sqlvarbasetostr,fn_stmt_sql_handle_from_sql_stmt,fn_trace_geteventinfo,fn_trace_getfilterinfo,fn_trace_getinfo,fn_trace_gettable,fn_translate_permissions,fn_validate_plan_guide,fn_varbintohexstr,fn_varbintohexsubstring,fn_virtualfilestats,fn_virtualservernodes,fn_xe_file_target_read_file,fn_yukonsecuritymodelrequired,dm_cryptographic_provider_algorithms,dm_cryptographic_provider_keys,dm_cryptographic_provider_sessions,dm_db_database_page_allocations,dm_db_incremental_stats_properties,dm_db_index_operational_stats,dm_db_index_physical_stats,dm_db_log_info,dm_db_log_stats,dm_db_missing_index_columns,dm_db_objects_disabled_on_compatibility_level_change,dm_db_page_info,dm_db_stats_histogram,dm_db_stats_properties,dm_db_stats_properties_internal,dm_enumerate_blobdirectory,dm_exec_cached_plan_dependent_objects,dm_exec_cursors,dm_exec_describe_first_result_set,dm_exec_describe_first_result_set_for_object,dm_exec_input_buffer,dm_exec_plan_attributes,dm_exec_query_plan,dm_exec_query_plan_stats,dm_exec_query_statistics_xml,dm_exec_sql_text,dm_exec_text_query_plan,dm_exec_xml_handles,dm_fts_index_keywords,dm_fts_index_keywords_by_document,dm_fts_index_keywords_by_property,dm_fts_index_keywords_position_by_document,dm_fts_parser,dm_io_virtual_file_stats,dm_logconsumer_cachebufferrefs,dm_logconsumer_privatecachebuffers,dm_logpool_consumers,dm_logpool_sharedcachebuffers,dm_logpoolmgr_freepools,dm_logpoolmgr_respoolsize,dm_logpoolmgr_stats,dm_os_enumerate_filesystem,dm_os_file_exists,dm_os_volume_stats,dm_sql_referenced_entities,dm_sql_referencing_entities,geographycollectionaggregate,geographyconvexhullaggregate,geographyenvelopeaggregate,geographyunionaggregate,geometrycollectionaggregate,geometryconvexhullaggregate,geometryenvelopeaggregate,geometryunionaggregate,ormask,fn_syspolicy_is_automation_enabled
 supported-1.0.0=fn_helpcollations,fn_listextendedproperty
 supported-2.2.0=fn_syspolicy_is_automation_enabled
+supported-4.6.0-4.*=fn_varbintohexsubstring
+supported-5.2.0=fn_varbintohexsubstring
 complexity_score=HIGH
 
 #--- Permissions -----
@@ -1690,5 +1694,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=76e03d7c
+#file checksum=ac1345ea
 #--- end ---------------------------------------------------------------------------
