Add compass support for system proc 'sp_helplogins'
Signed-off-by: Ayush Shah <ayushdsh@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -1100,6 +1100,8 @@ supported-3.5.0-3.*=sp_procedure_params_100_managed
 supported-4.1.0=sp_procedure_params_100_managed
 supported-4.2.0=sp_renamedb
 supported-4.4.0=sp_reset_connection
+supported-4.7.0=sp_helplogins
+supported-5.3.0=sp_helplogins
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
@@ -1694,5 +1696,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=ac1345ea
+#file checksum=1834c6ea
 #--- end ---------------------------------------------------------------------------
