Rectified release version for sp_helplogins
Signed-off-by: Ayush Shah <ayushdsh@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -1100,7 +1100,7 @@ supported-3.5.0-3.*=sp_procedure_params_100_managed
 supported-4.1.0=sp_procedure_params_100_managed
 supported-4.2.0=sp_renamedb
 supported-4.4.0=sp_reset_connection
-supported-4.7.0=sp_helplogins
+supported-4.7.0-4.*=sp_helplogins
 supported-5.3.0=sp_helplogins
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
