Fixed issue with CONTAINS to detect first argument as single column, multi column, STAR, property
Signed-off-by: Rohit Bhagat <rohitbgt@amazon.com>

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -1686,7 +1686,9 @@ supported-3.5.0=CREATE,DROP
 
 [FULLTEXT CONTAINS]
 rule=function_call
-list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS
+list=FORMSOF,ISABOUT,NEAR,INFLECTIONAL,THESAURUS,SINGLE_COLUMN,MULTI_COLUMN,STAR,PROPERTY
+supported-4.0.0=SINGLE_COLUMN
+supported-5.2.0=MULTI_COLUMN
 complexity_score=HIGH
 
 [Legacy Schema Names]
@@ -1696,5 +1698,5 @@ report_group=Identifiers
 complexity_score=LOW
 
 #-----------------------------------------------------------------------------------
-#file checksum=1834c6ea
+#file checksum=0985cadb
 #--- end ---------------------------------------------------------------------------
